src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply bg-light;
  @apply overflow-x-hidden;
}

aside {
  height: calc(100vh - 40px);
}

.active {
  @apply text-secondary !important;
  @apply outline-secondary;
  @apply outline;
  @apply outline-1;

}

/* Scrollbar */
::-webkit-scrollbar {
  @apply w-[5px];
}

::-webkit-scrollbar-track {
  @apply bg-black
}

::-webkit-scrollbar-thumb {
  @apply bg-secondary;
  @apply rounded-full;
  @apply transition-all;
}

::-webkit-scrollbar-thumb:hover {
  @apply bg-secondary-2;
}

* {
  scroll-behavior: smooth;
}

